added header styles, removed the books page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Svelte + TS + Vite App</title>
   </head>
   <body>
-    <div id="app" class="flex flex-col h-screen justify-between p-3"></div>
+    <div id="app" class="flex flex-col h-screen justify-between"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
