minor fix for styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Svelte + TS + Vite App</title>
   </head>
   <body>
-    <div id="app" class="flex flex-col h-screen justify-between"></div>
+    <div id="app" class="flex flex-col justify-between" style="height: 100vh;"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
